--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -151,7 +151,7 @@ This unique anchor is for a post successful exam scroll event. Please do not rem
 {%- comment -%}
 Adding exam script here for proper inlining
 {%- endcomment -%}
-{# <script>
+<!-- <script>
 
 
 // Native JS equivalent of jQuery's document.ready
@@ -168,4 +168,4 @@ document.addEventListener('readystatechange', event => {
   }
 });
 
-</script> #}
+</script> -->
