Update Take 5 hero
- Update preload hints for image and style
- Update text content and semantics
- Update text and CTA spacing
- Add assets timestamp

--- a/_includes/heros/hero-take5-campaign.html
+++ b/_includes/heros/hero-take5-campaign.html
@@ -1,4 +1,5 @@
-<link rel="preload" as="image" media="(min-width: 1200em)" href="{{ site.url }}/img/take5/posters/gym-5019-hero.jpg">
+<link rel="preload" href="{{ site.url }}/img/take5/posters/gym-5019-hero.jpg?{{ site.time | date:'%s' }}" as="image" media="(min-width: 75em)">
+<link rel="preload" href="{{ site.url }}/css/hero-take5-campaign.css?{{ site.time | date:'%s' }}" as="style">
 <link rel="stylesheet" href="{{ site.url }}/css/hero-take5-campaign.css?{{ site.time | date:'%s' }}">
 
 <div class="hero-promo" id="hero-take5-campaign">
@@ -14,7 +15,7 @@
       <header>
         <h2><span class="take5-brand-kern">Take 5</span></h2>
         <h1>Learn A New Skill in 5 Minutes</h1>
-        <p class="description"><strong>Free video tutorials on accessibility, career skills, prototyping, UX, and web design and development.</strong></p>
+        <p class="description">Free video tutorials on design, development, accessibility, prototyping, UX, and career skills.</p>
       </header>
       <div class="cta">
         <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/courses/take5"><b>Watch and Learn</b></a>
