--- a/css/hero-take5-campaign.scss
+++ b/css/hero-take5-campaign.scss
@@ -37,50 +37,50 @@
 // animation: 60s ease-in-out infinite running slide-show;
 
 #slide-1 {
-  background-image: url("{{ site.url }}/img/take5/posters/gym-5019.jpg");
+  background-image: url("{{ site.url }}/img/take5/posters/gym-5019.jpg?{{ site.time | date:'%s' }}");
   animation-name: fade-1;
 }
 
 #slide-2 {
-  background-image: url("{{ site.url }}/img/take5/posters/gym-5013.jpg");
+  background-image: url("{{ site.url }}/img/take5/posters/gym-5013.jpg?{{ site.time | date:'%s' }}");
   animation-name: fade-2;
 }
 
 #slide-3 {
-  background-image: url("{{ site.url }}/img/take5/posters/gym-5002.jpg");
+  background-image: url("{{ site.url }}/img/take5/posters/gym-5002.jpg?{{ site.time | date:'%s' }}");
   animation-name: fade-3;
 }
 
 #slide-4 {
-  background-image: url("{{ site.url }}/img/take5/posters/gym-5001.jpg");
+  background-image: url("{{ site.url }}/img/take5/posters/gym-5001.jpg?{{ site.time | date:'%s' }}");
   animation-name: fade-4;
 }
 
 #slide-5 {
-  background-image: url("{{ site.url }}/img/take5/posters/gym-5007.jpg");
+  background-image: url("{{ site.url }}/img/take5/posters/gym-5007.jpg?{{ site.time | date:'%s' }}");
   animation-name: fade-5;
 }
 
 @include breakpoint(large, min) {
 
   #slide-1 {
-    background-image: url("{{ site.url }}/img/take5/posters/gym-5019-hero.jpg");
+    background-image: url("{{ site.url }}/img/take5/posters/gym-5019-hero.jpg?{{ site.time | date:'%s' }}");
   }
 
   #slide-2 {
-    background-image: url("{{ site.url }}/img/take5/posters/gym-5013-hero.jpg");
+    background-image: url("{{ site.url }}/img/take5/posters/gym-5013-hero.jpg?{{ site.time | date:'%s' }}");
   }
 
   #slide-3 {
-    background-image: url("{{ site.url }}/img/take5/posters/gym-5002-hero.jpg");
+    background-image: url("{{ site.url }}/img/take5/posters/gym-5002-hero.jpg?{{ site.time | date:'%s' }}");
   }
 
   #slide-4 {
-    background-image: url("{{ site.url }}/img/take5/posters/gym-5001-hero.jpg");
+    background-image: url("{{ site.url }}/img/take5/posters/gym-5001-hero.jpg?{{ site.time | date:'%s' }}");
   }
 
   #slide-5 {
-    background-image: url("{{ site.url }}/img/take5/posters/gym-5007-hero.jpg");
+    background-image: url("{{ site.url }}/img/take5/posters/gym-5007-hero.jpg?{{ site.time | date:'%s' }}");
   }
 
 }
@@ -99,8 +99,8 @@
   background: linear-gradient(135deg, $gym-green, $gym-green, $gym-teal, $gym-teal, $gym-magenta, $gym-magenta, $gym-orange);
   background-size: 700% 700%;
   animation: 60s cubic-bezier(0.445, 0.05, 0.55, 0.95) infinite running ebb-flow;
-  opacity: 0.95;
-  z-index: 1;
+  opacity: 0.94;
+  z-index: 0;
 }
 
 @include ebb-flow;
@@ -113,7 +113,7 @@
   padding-right: 15px;
   margin-top: 24px;
   margin-bottom: 12px;
-  z-index: 2;
+  z-index: 1;
 }
 
 .hero-content-copy header h1 {
@@ -149,17 +149,19 @@
 }
 
 .hero-content-copy .description {
-  font-size: 1.4em;
+  font-size: 1.35em;
+  font-weight: bold;
+  line-height: 1.35;
   color: $gym-black;
-  margin-top: 1.6rem;
+  margin-top: 1.5rem;
 }
 
 @include breakpoint(medium, min) {
 
   .hero-promo .container {
-    max-width: 36em;
-    box-sizing: content-box;
+    max-width: 34em;
     min-height: 19.25em;
+    box-sizing: content-box;
   }
 
   .hero-content-copy {
@@ -172,7 +174,7 @@
 // cta
 
 .hero-promo .cta {
-  margin-top: 2.5rem;
+  margin-top: 2.875rem;
 }
 
 // !override / reset/rescale font-size adjustment
