Update courses hero
- Update text semantics

--- a/css/hero-courses-evergreen.scss
+++ b/css/hero-courses-evergreen.scss
@@ -96,6 +96,7 @@
 
 .content .description {
   font-size: 1.35em;
+  font-weight: bold;
   line-height: 1.35;
   color: $gym-black;
   margin-top: 1.5rem;
