--- a/_includes/heros/hero-courses-evergreen.html
+++ b/_includes/heros/hero-courses-evergreen.html
@@ -14,7 +14,7 @@
     <div class="content">
       <header>
         <h1 class="all-caps">Learn New Skills From Experts at Your Own Pace</h1>
-        <p class="description"><b>Keep your skills fresh with free online courses and 5-minute tutorials on practical topics.</b></p>
+        <p class="description">Keep your skills fresh with free online courses and 5-minute tutorials on practical topics.</p>
       </header>
       <div class="cta">
         <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/courses"><b>Take a Free Course</b></a>
