--- a/_includes/heros/hero-take5-campaign.html
+++ b/_includes/heros/hero-take5-campaign.html
@@ -15,10 +15,10 @@
       <header>
         <h2><span class="take5-brand-kern">Take 5</span></h2>
         <h1>Learn A New Skill in 5 Minutes</h1>
-        <p class="description">Free video tutorials on design, development, accessibility, prototyping, UX, and career skills.</p>
+        <p class="description">Watch free video tutorials on design, development, accessibility, prototyping, UX, and career skills.</p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/courses/take5"><b>Watch and Learn</b></a>
+        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/courses/take5"><b>Learn Something New</b></a>
       </div>
     </div>
   </div>
