Update dashboard archived course button
- Update font-size and color

--- a/css/main.scss
+++ b/css/main.scss
@@ -2370,6 +2370,11 @@ TODO: migrate discussion CSS out of theme
   margin: 1em 1em 0;
 }
 
+#dashboard-main .archived {
+  font-size: 1.45em;
+  color: #fff;
+}
+
 // Enrollment disabled
 
 .course-metabar .register.disabled {
