--- a/css/main.scss
+++ b/css/main.scss
@@ -2364,6 +2364,12 @@ TODO: migrate discussion CSS out of theme
   content: "{{ site.data.courses.GYM-100.retired_message[2] }}";
 }
 
+// Hide "Go to Class" button/link
+
+.course-metabar a[href*="GYM/100"] {
+  display: none;
+}
+
 // Dashboard
 
 #dashboard-main #course-header-100 h1 + *:before {
@@ -2373,6 +2379,12 @@ TODO: migrate discussion CSS out of theme
 #dashboard-main .archived {
   font-size: 1.45em;
   color: #fff;
+  overflow: hidden;
+}
+
+#dashboard-main .archived:before {
+  content: "";
+  margin-right: -6ex;
 }
 
 // Enrollment disabled
