Update Ukraine Relief site banner
- Add home page exclude ruleset

--- a/css/main.scss
+++ b/css/main.scss
@@ -2497,6 +2497,6 @@ aside.system-status {
 
 // Exclude sitewide banner from home page
 
-// .gymnasium-home aside.system-status {
-//   display: none;
-// }
+.gymnasium-home aside.system-status {
+  display: none;
+}
