Update Ukraine Relief banners
- Update hero text, copy clearance
- Udpate hero styling to adjust spacing
- Update site banner text

--- a/_includes/heros/hero-ukraine-relief.html
+++ b/_includes/heros/hero-ukraine-relief.html
@@ -13,7 +13,7 @@
         <h2>Ukraine Relief</h2>
         <h1>Together We Can Make a Difference</h1>
         <p><strong>Join us in supporting the CARE Ukraine Crisis Fund.
-We’re matching all donations up to $100,000.</strong></p>
+We’re donating $100,000 through matching funds and contributions.</strong></p>
         <p>Funds raised are going toward providing food, water, and aid directly to those in need.<p>
       </header>
       <div class="cta">
