--- a/partials/final-exam-modal-top.html
+++ b/partials/final-exam-modal-top.html
@@ -8,7 +8,7 @@ styles are in final-exam-modal.html in gymcms
 
 <main role="main">
   <div id="exam-grade" class="exam-grade"></div><!-- .exam-grade -->
-  <div class="message hidden passed_modal final-exam-status FULL_COURSE" aria-hidden="true" id="course_passed_message">
+  <div class="message hidden passed_modal final-exam-status FULL_COURSE" aria-hidden="true">
     <h2>You did it! 🎉</h2>
     <p>Congratulations on passing the final exam.</p>
     <p>Now you can show off your achievement by sharing your certificate on social media. You can always access your certificate from the <a href="/dashboard">Dashboard</a>.</p>
@@ -18,7 +18,7 @@ styles are in final-exam-modal.html in gymcms
     </div>
   </div>
 
-  <div class="message hidden passed_modal final-exam-status GYM_SHORT" aria-hidden="true" id="course_passed_message">
+  <div class="message hidden passed_modal final-exam-status GYM_SHORT" aria-hidden="true">
     <h2>You did it! 🎉</h2>
     <p>Congratulations on passing the final exam!</p>
     <p>Now you can show off your achievement by sharing your badge on social media. You can always access your badge from the <a href="/dashboard">Dashboard</a>.</p>
