--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -2,111 +2,13 @@
 layout: raw
 permalink: /partials/final-exam-modal/
 ---
-<style>
-
-.message {
-  color: #333;
-  text-align: center;
-  padding: 1.8em;
-  border: 1.2em solid #444;
-  border-radius: 2px;
-  margin-top: 1.8em;
-  margin-bottom: 1.8em;
-}
-
-.message h2 {
-  font: 900 1.8em/1.1 brandon-grotesque, "Helvetica Neue", Helvetica, sans-serif;
-  text-transform: uppercase;
-  letter-spacing: .03em;
-  text-align: center;
-  margin-bottom: .8em;
-}
-
-.message p {
-  font-family: brandon-grotesque, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 1.2em;
-  line-height: 1.5;
-}
-
-.message h2 + p {
-  font-size: 1.4em;
-}
-
-.message p {
-  text-align: left;
-  margin-top: .6em;
-}
-
-.message hr {
-  height: 0;
-  border: 0;
-  border-top: 1px solid #ddd;
-  margin-top: 1.4em;
-}
-
-.message .survey {
-  display: inline-block;
-  background: #ebebeb;
-  padding: 1.2em;
-  border: 1px solid #ccc;
-  margin-top: 1.4em;
-}
-
-.message .survey p {
-  margin-top: 0;
-}
-
-.message .gym-button {
-  margin-top: 1.2em;
-}
-
-a.gym-button-primary {
-  display: inline-block;
-  font: bold 1.2em/1 brandon-grotesque, "Helvetica Neue", Helvetica, sans-serif;
-  color: #fff;
-  letter-spacing: .025em;
-  vertical-align: normal;
-  background: #f8971d;
-  padding: 1em 2em;
-  border: 0;
-  border-radius: 2px;
-  margin-top: .5em;
-  margin-right: .84em;
-  margin-bottom: .5em;
-  cursor: pointer;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  width: auto !important;
-  }
-
-a.gym-button-primary:hover {
-  background: #a6a6a6;
-}
-
-a.gym-button.gym-button-secondary {
-  color: #333;
-  background: none;
-  border: 2px solid #333;
-  width: auto !important;
-}
-
-a.gym-button.gym-button-secondary:hover,
-a.gym-button.gym-button-secondary:focus {
-  color: #fff !important;
-  background: #a6a6a6 !important;
-  border: 2px solid #333 !important;
-}
-
-</style>
-
 {%- comment -%}
 This unique anchor is for a post successful exam scroll event. Please do not remove or duplicate to the top modal.
 {%- endcomment -%}
 <a id="course_passed_message"></a>
 
 <main role="main">
-  <div class="message hidden passed_modal final-exam-status FULL_COURSE" aria-hidden="true" id="course_passed_message">
+  <div class="message hidden passed_modal final-exam-status FULL_COURSE" aria-hidden="true">
     <h2>You did it! 🎉</h2>
     <p>Congratulations on passing the final exam!</p>
     <p>Now you can show off your achievement by sharing your certificate on social media. You can always access your certificate from the <a href="/dashboard">Dashboard</a>.</p>
@@ -116,7 +18,7 @@ This unique anchor is for a post successful exam scroll event. Please do not rem
     </div>
   </div>
 
-  <div class="message hidden passed_modal final-exam-status GYM_SHORT" aria-hidden="true" id="course_passed_message">
+  <div class="message hidden passed_modal final-exam-status GYM_SHORT" aria-hidden="true">
     <h2>You did it! 🎉</h2>
     <p>Congratulations on passing the final exam.</p>
     <p>Now you can show off your achievement by sharing your badge on social media. You can always access your badge from the <a href="/dashboard">Dashboard</a>.</p>
