--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -26,9 +26,9 @@
               </ul>
             </section>
           </div>
-          <div class="col-xs-6 col-md-2 collections">
+          <div class="col-xs-6 col-md-3 collections">
             <section class="footer-link-list" id="collections">
-              <h2>Collections</h2>
+              <h2>Content Collections</h2>
               <ul>
                 <li><a href="/design-systems">Design Systems</a></li>
                 <li><a href="/web-development">Web Development</a></li>
@@ -51,7 +51,7 @@
               </ul>
             </section>
           </div>
-          <div class="col-xs-6 col-md-2 social">
+          <div class="col-xs-6 col-md-1 social">
             <section class="footer-link-list" id="social">
               <h2>Social</h2>
               <ul>
