--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -353,18 +353,24 @@ function exam() {
       $(".try_again_modal").addClass('hidden');
       $(".failed_modal").addClass('hidden');
 
-      console.log('[gym]: ajax submission occurs here');
+      if (state === 'load') {
+        console.log('[gym]: load state only.');
+      } else if (state === 'submit') {
+        console.log('[gym]: submit state. ajax submission occurs here.');
 
-      //generate the certificate through the API
-      // $.ajax({
-      //   type:     'POST',
-      //   url:      '/accredible/request_certificate',
-      //   async:     false,
-      //   data:     {'course_id': window.$$course_id},
-      //   success:  function(data) {
-      //     // console.log('[gym] certificate request successful: ', data);
-      //   }
-      // });
+        //generate the certificate through the API
+        // $.ajax({
+        //   type:     'POST',
+        //   url:      '/accredible/request_certificate',
+        //   async:     false,
+        //   data:     {'course_id': window.$$course_id},
+        //   success:  function(data) {
+        //     // console.log('[gym] certificate request successful: ', data);
+        //   }
+        // });
+      }
+
+
     } else {
       //we failed :( see if we have another attempt
       if (attempts_remaining > 0) {
@@ -439,9 +445,15 @@ function exam() {
   });
 }
 
-$(function() {
-  exam();
+// $(function() {
+//   exam();
 
-});
+// });
+
+document.onreadystatechange = function() {
+  if (document.readyState === 'complete') {
+    exam();
+  }
+};
 
 </script>
