--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -450,13 +450,15 @@ function exam() {
 
 // });
 
-document.onreadystatechange = function() {
-  if (document.readyState === 'interactive') {
-    exam();
-  }
-  if (document.readyState === 'complete') {
+// document.onreadystatechange = function() {
+//   if (document.readyState === 'interactive') {
+    
+//   }
+//   if (document.readyState === 'complete') {
 
-  }
-};
+//   }
+// };
+
+exam();
 
 </script>
