--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -270,7 +270,7 @@ function exam() {
 
   let previous_score;
 
-  let COURSE_ID;
+  const courseNum = parseInt(document.getElementById('__course_number__').innerText, 10);
 
   // this helper function gets a ton of information about the score for this particular problem
   // based on information embedded on this page
@@ -280,8 +280,7 @@ function exam() {
       GYM_SHORT: 'GYM_SHORT',
     };
 
-    COURSE_ID = parseInt($('#__course_number__').text(), 10);
-    const COURSE_TYPE = COURSE_ID >= 100 ? COURSE_TYPES.FULL_COURSE : COURSE_TYPES.GYM_SHORT;
+    const COURSE_TYPE = courseNum >= 100 ? COURSE_TYPES.FULL_COURSE : COURSE_TYPES.GYM_SHORT;
     let PASSING_SCORE = 85;
 
     if (COURSE_TYPE === COURSE_TYPES.FULL_COURSE) {
@@ -340,7 +339,7 @@ function exam() {
 
     // we have a score, let's do stuff
     if (score >= passingScore) {
-      // previous_score = getPrevScore(COURSE_ID);
+      // previous_score = getPrevScore(courseNum);
 
       // if (score > previous_score && attempts_remaining > 0) {
       //   console.log('[gym] new high score! ', score, '\nprevious score: ', previous_score);
@@ -405,15 +404,10 @@ function exam() {
 
     let problemId = document.getElementById('exam-problem').getAttribute('data-id');
 
-    COURSE_ID = parseInt(document.getElementById('__course_number__').innerText, 10);
-
-    // previous_score = getPrevScore(COURSE_ID);
-
-    // console.log('[gym] exam page | previous score: ', previous_score);
-
-    let observer = new MutationObserver(mutationRecords => {
-      // log
-      console.log('[gym] mutation records: ', mutationRecords);
+    let observer = new MutationObserver(mutations => {
+      mutations.forEach(function listMutations(mutation) {
+        console.log('[gym] mutation type: ', mutation.type);
+      });
 
       // reset interval if we detect a grade change
       if (typeof progressStatusCheck !== 'undefined'){
@@ -444,20 +438,6 @@ function exam() {
     document.getElementById('course_passed_message').scrollIntoView();
   });
 }
-
-// $(function() {
-//   exam();
-
-// });
-
-// document.onreadystatechange = function() {
-//   if (document.readyState === 'interactive') {
-    
-//   }
-//   if (document.readyState === 'complete') {
-
-//   }
-// };
 
 exam();
 
