--- a/partials/final-exam-modal.html
+++ b/partials/final-exam-modal.html
@@ -270,28 +270,29 @@ function exam() {
 
   let previous_score;
 
-  let state = 'load';
+  var state;
 
   const courseNum = parseInt(document.getElementById('__course_number__').innerText, 10);
+
+  const COURSE_TYPES = {
+    FULL_COURSE: 'FULL_COURSE',
+    GYM_SHORT: 'GYM_SHORT',
+  };
+
+  const COURSE_TYPE = courseNum >= 100 ? COURSE_TYPES.FULL_COURSE : COURSE_TYPES.GYM_SHORT;
+  let PASSING_SCORE = 85;
+
+  if (COURSE_TYPE === COURSE_TYPES.FULL_COURSE) {
+    // full courses have a passing grade of 85
+    PASSING_SCORE = 85;
+  } else {
+    // gym shorts have a passing grade of 80
+    PASSING_SCORE = 80;
+  }
 
   // this helper function gets a ton of information about the score for this particular problem
   // based on information embedded on this page
   function processScore() {
-    const COURSE_TYPES = {
-      FULL_COURSE: 'FULL_COURSE',
-      GYM_SHORT: 'GYM_SHORT',
-    };
-
-    const COURSE_TYPE = courseNum >= 100 ? COURSE_TYPES.FULL_COURSE : COURSE_TYPES.GYM_SHORT;
-    let PASSING_SCORE = 85;
-
-    if (COURSE_TYPE === COURSE_TYPES.FULL_COURSE) {
-      // full courses have a passing grade of 85
-      PASSING_SCORE = 85;
-    } else {
-      // gym shorts have a passing grade of 80
-      PASSING_SCORE = 80;
-    }
 
     // look into the div with a class of .problem-progress for our score
     // it contains a string that looks like:
@@ -406,6 +407,8 @@ function exam() {
   if (!!problemHeader && problemHeader.innerText.toLowerCase() === 'final exam') {
     console.log('[gym]: exam page');
 
+    state = 'load';
+
     let problemId = document.getElementById('exam-problem').getAttribute('data-id');
 
     let observer = new MutationObserver(mutations => {
@@ -428,21 +431,24 @@ function exam() {
         attributes: false,
         childList: true,
         subtree: false
-      },
+      }
     );
+
+    // scroll to show the results message
+    document.getElementById('check-button').addEventListener('click', function() {
+      console.log('[gym] check exam button clicked');
+
+      state = 'submit';
+
+      document.getElementById('course_passed_message').scrollIntoView();
+    }, false);
+    // $('#check-button').on('click', function submitButton() {
+      
+    // });
   } else {
     console.log('[gym]: not exam page');
     return;
   }
-
-  // scroll to show the results message
-  $('#check-button').click(function() {
-    // console.log('[gym] check exam button clicked');
-
-    state = 'submit';
-
-    document.getElementById('course_passed_message').scrollIntoView();
-  });
 }
 
 // Initialize exam function (do not wrap this in a document ready or anything similar, otherwise the mutation observer will not work properly)
